--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -8,10 +8,6 @@
   display: none;
 }
 
-.comments__expandBtn__txt {
-  color: #000
-}
-
 .comments__expandBtn__label {
   display: flex;
   flex-direction: row;
